ml_results/job-out-files/09/09-n2npt-train169349.err

Currently Loaded Modules:
  1) intel/18.0.2   4) autotools/1.2   7) TACC
  2) impi/18.0.2    5) cmake/3.16.1    8) python3/3.7.0
  3) git/2.24.1     6) xalt/2.9.6      9) cuda/11.0     (g)

  Where:
   g:  built for GPU

 

Traceback (most recent call last):
  File "src/train.py", line 7, in <module>
    from datasets import load_dataset
  File "/work2/08261/evanat/maverick2/n2n-pytorch/src/datasets.py", line 67
    assert w >= self.crop_size and h >= self.crop_size,                  # this assertion is unnecessary because images are resized anyway (see for loop below)
                                                                                                                                                              ^
SyntaxError: invalid syntax
